feat: 🎸 make tactical coach ui

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -37,6 +37,7 @@
   "dark": "Dark Mode",
   "delete": "Delete",
   "description": "Description",
+  "descriptionRequired": "Description is required",
   "detail": "Detail",
   "dontHaveAnAccount": "Don't have an account?",
   "download": "Download",
@@ -57,14 +58,18 @@
   "english": "English",
   "enterClubDescription": "Enter club description",
   "enterClubName": "Enter club name",
-  "enterDescription": "Enter description",
+  "enterDescription": "Enter the description",
   "enterDueAt": "Enter due at",
   "enterEmailOrUsernameOrPhone": "Enter email / username / phone",
   "enterEndDate": "Enter the end date",
   "enterExamDescription": "Enter exam description",
   "enterExamTitle": "Enter exam title",
+  "enterHeight": "Enter the board height",
   "enterProgramName": "Enter program name",
   "enterStartDate": "Enter the start date",
+  "enterTacticalName": "Enter the tactical name",
+  "enterTotalPlayers": "Enter the total players",
+  "enterWidth": "Enter the board width",
   "enterYourAddress": "Enter your address",
   "enterYourBornDate": "Enter your born date",
   "enterYourBornPlace": "Enter your born place",
@@ -108,6 +113,8 @@
   "genderRequired": "Gender is required",
   "general": "General",
   "handBall": "Handball",
+  "height": "Height (m)",
+  "heightRequired": "Height is required",
   "hello": "Hello,",
   "history": "History",
   "identifierRequired": "Identifier is required",
@@ -181,6 +188,11 @@
   "successUpdateQuestions": "Successfully update questions",
   "system": "System",
   "tactical": "Tactical",
+  "tacticalName": "Tactical Name",
+  "tacticalImageRequired": "Tactical image is required",
+  "tacticalNameRequired": "Tactical name is required",
+  "totalPlayers": "Total Players/Team",
+  "totalPlayersRequired": "Total players are required",
   "theme": "Theme",
   "title": "Title",
   "updateClub": "Update Club",
@@ -193,5 +205,7 @@
   "usernameRequired": "Username is required",
   "volleyBall": "Volleyball",
   "warning": "Warning",
+  "width": "Width (m)",
+  "widthRequired": "Width is required",
   "welcomeBack": "Welcome back"
 }
