--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -37,6 +37,7 @@
   "dark": "Mode Gelap",
   "delete": "Hapus",
   "description": "Deskripsi",
+  "descriptionRequired": "Deskripsi diperlukan",
   "detail": "Detail",
   "dontHaveAnAccount": "Tidak punya akun?",
   "download": "Unduh",
@@ -63,8 +64,12 @@
   "enterEndDate": "Masukkan tanggal selesai",
   "enterExamDescription": "Masukkan deskripsi ujian",
   "enterExamTitle": "Masukkan judul ujian",
+  "enterHeight": "Masukkan tinggi papan",
   "enterProgramName": "Masukkan nama program",
   "enterStartDate": "Masukkan tanggal mulai",
+  "enterTacticalName": "Masukkan nama taktik",
+  "enterTotalPlayers": "Masukkan jumlah pemain",
+  "enterWidth": "Masukkan lebar papan",
   "enterYourAddress": "Masukkan alamat Anda",
   "enterYourBornDate": "Masukkan tanggal lahir Anda",
   "enterYourBornPlace": "Masukkan tempat lahir Anda",
@@ -108,6 +113,8 @@
   "genderRequired": "Jenis kelamin diperlukan",
   "general": "Umum",
   "handBall": "Bola Tangan",
+  "height": "Tinggi (m)",
+  "heightRequired": "Tinggi diperlukan",
   "hello": "Halo,",
   "history": "Sejarah",
   "identifierRequired": "Pengenal diperlukan",
@@ -180,7 +187,12 @@
   "successUpdateProfile": "Berhasil memperbarui profil",
   "successUpdateQuestions": "Berhasil memperbarui pertanyaan",
   "system": "Sistem",
-  "tactical": "Taktis",
+  "tactical": "Taktik",
+  "tacticalName": "Nama Taktik",
+  "tacticalImageRequired": "Foto taktik diperlukan",
+  "tacticalNameRequired": "Taktik diperlukan",
+  "totalPlayers": "Jumlah Pemain/Tim",
+  "totalPlayersRequired": "Jumlah pemain diperlukan",
   "theme": "Tema",
   "title": "Judul",
   "updateClub": "Perbarui Klub",
@@ -193,5 +205,7 @@
   "usernameRequired": "Nama pengguna diperlukan",
   "volleyBall": "Bola Voli",
   "warning": "Peringatan",
+  "width": "Lebar (m)",
+  "widthRequired": "Lebar diperlukan",
   "welcomeBack": "Selamat datang kembali"
 }
