feat: 🎸 make coach exam ui

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -88,8 +88,10 @@
   "errorUpdateQuestion": "Failed to update question",
   "establishedAt": "Established at :",
   "exam": "Exam",
+  "examTitle": "Exam Title",
   "examDescription": "Exam Description",
   "exams": "Exams",
+  "examImageRequired": "Exam image is required",
   "examTitleRequired": "Exam title is required",
   "exercise": "Exercise",
   "expertise": "Expertise",
