--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -88,8 +88,10 @@
   "errorUpdateQuestion": "Gagal memperbarui pertanyaan",
   "establishedAt": "Ditetapkan pada :",
   "exam": "Ujian",
+  "examTitle": "Judul Ujian",
   "examDescription": "Deskripsi Ujian",
   "exams": "Ujian",
+  "examImageRequired": "Foto ujian diperlukan",
   "examTitleRequired": "Judul ujian diperlukan",
   "exercise": "Latihan",
   "expertise": "Keahlian",
